# rich-typography

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: gh-pages.yml  python-package.yml
docs/: fonts.md  getting_started.md  index.md  roadmap.md
docs/api/: font.md  fonts.md  glyphs.md  linestyle.md  typography.md
docs/examples/: markdown.py
docs/fonts/: index.md
docs/stylesheets/: extra.css
docs/user-guide/: custom-markdown.md
docs/user_guide/: custom_font.md  index.md  markdown.md
src/rich_typography/: __init__.py  __main__.py  _doc.py  font.py  glyph.py  glyphs.py  line.py  typography.py
src/rich_typography/extended/: __init__.py  condensed_sans.py  sans.py  sansserif.py
src/rich_typography/fonts/: __init__.py  _font.py  _line.py  condensedsans.toff  condensedscript.toff  condensedserif.toff  illumina.py  sansserif.py  semiserif.py  serif.py
src/rich_typography/fonts/extended/: condensedsans.glyphs  sans.toff
src/rich_typography/fonts/files/: condensedsans.glyphs  condensedscript.glyphs  condensedsemi.glyphs  condensedserif.glyphs  semiserif.glyphs
tests/: test_font.py  test_glyphs.py  test_typography.py
tests/assets/: fonts.py
tests/fonts/: simple.glyphs
tests/utilities/: __init__.py  asserts.py  fonts.py  markup.py  render.py
tests/utilities/files/: simple.glyphs
