[project]
name = "rich-typography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthias Kalms", email = "mtkalms@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
rich-typography = "rich_typography:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
