[project]
name = "rich-typography"
version = "0.2.0"
homepage = "https://github.com/mtkalms/rich-typography"
repository = "https://github.com/mtkalms/rich-typography"
documentation = "https://mtkalms.github.io/rich-typography"

description = "Large letter typography for Rich and Textual"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matthias Kalms", email = "mtkalms@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "rich>=14.2.0",
]

[project.scripts]
rich-typography = "rich_typography:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.coverage.run]
omit = [
    "tests/*",
]
